Fix scrollbar at bottom of page, narrow the holder and add a dropshadow.

--- a/server/ncm/stylesheets/styles.css
+++ b/server/ncm/stylesheets/styles.css
@@ -13,13 +13,19 @@ body {
 
 #holder {
 	margin:auto;
-	width:100%;
-	min-height:100%;
+	width:1000px;
 	background:white;
 	border-radius:15px;
 	-moz-border-radius:15px;
 	-webkit-border-radius:15px;
-	overflow:auto;
+	overflow:hidden;
+	-moz-box-shadow: 3px 3px 4px #000;
+	-webkit-box-shadow: 3px 3px 4px #000;
+	box-shadow: 3px 3px 4px #000;
+	/* For IE 8 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000')";
+	/* For IE 5.5 - 7 */
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000');
 }
 
 #banner { 
